# ReadfishSummarise

./: .gitignore  .pre-commit-config.yaml  .taplo.toml  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
python/readfish_summarise/: cli.py  fastq_utils.py  summarise.py
src/: lib.rs
tests/: fastq_test.py
tests/static/summarise_test/: expected_barcoded_regions_summary.txt  expected_barcoded_summary.txt  expected_summary.txt  expected_summary_large_file.txt  yeast_summary_barcoded_regions_test.toml  yeast_summary_barcoded_test.toml  yeast_summary_large_file_regions_test.toml
tests/utils/utils/: test_helper_functions.py
