[package]
name = "readfish_summarise"
version = "0.2.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prettytable-rs = "0.10.0"
natord = "1.0.9"
num-format = "0.4.4"
pyo3 = "0.19.1"
rayon = "1.7.0"
itertools = "0.11.0"
readfish-tools = {  git = "https://github.com/adoni5/readfish-tools.git", default-features = false}
csv = "1.2.2"
pyo3-log = "0.8.3"
log = "0.4.20"
flate2 = {version = "1.0.27", features = ["zlib-ng"], default-features = false}

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units  = 1
