[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "readfish_summarise"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "0.1.1"
license = {text = "BSD 3-Clause License"}
description = "A blazingly fast Python library for summarising readfish PAF output"
authors = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
]
maintainers = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
]
homepage = "https://github.com/adoni5/ReadfishSummarise"
keywords = ["bioinformatics", "python", "rust", "readfish", "analysis"]
# dependencies = ["readfish"]

[project.urls]
# Documentation = "https://looselab.github.io/readfish"
"Bug Tracker" = "https://github.com/Adoni5/ReadfishSummarise/issues"
"Source Code" = "https://github.com/Adoni5/ReadfishSummarise"

[tool.maturin]
python-source = "python"
