[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "readfish_summarise"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
version = "0.2.1"
license = {text = "BSD 3-Clause License"}
description = "A blazingly fast Python/Rust library for summarising readfish FASTQ output"
authors = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
]
maintainers = [
    { name = "Rory Munro",  email = "rory.munro@nottingham.ac.uk"},
]
homepage = "https://github.com/adoni5/ReadfishSummarise"
keywords = ["bioinformatics", "python", "rust", "readfish", "analysis"]
dependencies = ["click", "mappy", "mappy-rs", "pytest", "alive-progress"]
[project.scripts]
readfish-summarise = "readfish_summarise.cli:cli"

[project.urls]
# Documentation = "https://looselab.github.io/readfish"
"Bug Tracker" = "https://github.com/Adoni5/ReadfishSummarise/issues"
"Source Code" = "https://github.com/Adoni5/ReadfishSummarise"

[tool.maturin]
python-source = "python"

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
testpaths = [
    "tests/*test.py",
    "src/readfish",
]
markers = [
    "alignment: marks tests which rely on loading or using Mappy or Mappy-rs aligners, used to test with both. (deselect with '-m \"not slow\", select with '-k alignment')",
]
